--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,11 @@ jobs:
     - name: Install dependencies
       uses: bahmutov/npm-install@v1
 
-    - name: Build project
-      run: npm run build
+    - name: npm install, build, and test example
+      working-directory: .
+      run: |
+        npm install --force
+        npm run build --if-present
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
